--- a/CSS/GalleryGride.css
+++ b/CSS/GalleryGride.css
@@ -11,13 +11,15 @@ body {
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(15, 70px);
+    grid-template-columns: repeat(15, 65px);
     grid-template-rows: repeat(4, 150px);
     gap: 10px;
 }
 
 .child {
     font-size: 30px;
+    background-color: aqua;
+    text-align: center;
 }
 
 .child1 {
@@ -52,7 +54,7 @@ body {
 }
 
 .ul {
-    margin: 30px 50px 0px 0px;
+    margin: 30px 0px 0px 0px;
 }
 
 .li {
@@ -63,13 +65,13 @@ body {
 .li1 {
     color: red;
     list-style: none;
-    margin: 20px 60px 5px 10px;
+    margin: 20px 50px 0px 0px;
 
 }
 
 
 .icon {
-    margin: 70px 30px 0px 0px;
+    margin: 70px 50px 0px 0px;
     justify-content: center;
 }
 
@@ -135,7 +137,7 @@ img {
 }
 
 
-@media (min-width:150px) {
+@media (min-width:800px) {
     .grid {
         grid-template-columns: repeat(15, 1fr);
     }
