--- a/CSS/MULTIPLE BACKGROUND ONE SIDE.css
+++ b/CSS/MULTIPLE BACKGROUND ONE SIDE.css
@@ -66,7 +66,7 @@
     font-size: 1.5rem;
     border-radius: 50%;
     background-color: white;
-    /* z-index: 1; */
+    z-index: 1;
 
 }
 
@@ -82,7 +82,7 @@
     font-size: 1.5rem;
     border-radius: 50%;
     background-color: white;
-    /* z-index: 1; */
+    z-index: 1;
 
 }
 
@@ -93,12 +93,11 @@
     border: 1px solid black;
     height: 50px;
     width: 50px;
-    /* color: red; */
     padding: 12px;
     font-size: 1.5rem;
     border-radius: 50%;
     background-color: white;
-    /* z-index: 1; */
+    z-index: 1;
 
 }
 
